--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - pip:
     - pandas=2.2.2
     - numpy==1.26.4
+    - simpy==4.0.2
     - matplotlib==3.9.1.post1
     - palmerpenguins==0.1.4
     - streamlit==1.37.0
